# cutils

./: .clangd  .gitignore  .gitmodules  justfile  main.c  meson.build
bitset/: bitset.c  bitset.h
fmt/: fmt.c  fmt.h
io/: io.c  io.h
math/: bigint.c  bigint.h  prime.c  prime.h  test.c
string/: str.c  str.h
vec/: iter.c  iter.h  slice.c  slice.h  vec.c  vec.h
